syntax = "proto3";
package Msg;
option go_package = "./;pb";

message TestGateRequest
{
    int32 id = 1;
		string msg = 2;
}

message TestGateResponse
{
    int32 id = 1;
	  string msg = 2;
}

message TestGameRequest
{
  int32 id = 1;
  string msg = 2;
}

message TestGameResponse
{
  int32 id = 1;
  string msg = 2;
}

message LoginRequest
{
  int64 role_id = 1;
}

message LoginResponse
{
  int64 role_id = 1;
}